add simple dark theme

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
     <script src="https://cdn.socket.io/socket.io-3.0.0.js"></script>
     <script defer src="app.js"></script>
+    <style>
+        body {
+            background-color: rgb(33, 33, 33);
+            color: rgb(255, 152, 0);
+        }
+    </style>
 </head>
 <body>
 
